--- a/FoodDrinksApp/templates/drink_create.html
+++ b/FoodDrinksApp/templates/drink_create.html
@@ -1,15 +1,25 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Drink{% endblock %}
+{% block title %}Edit Employee{% endblock %}
 
 {% block content %}
-<h2>Add Drink</h2>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="form-group">
-        {{ form.as_p }}
+{% with user.userprofile.role as role %}
+    {% if role.name == 'Admin' %}
+    <h2>Add Drink</h2>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.as_p }}
+        </div>
+        <button type="submit" class="btn btn-primary">Save</button>
+        <a href="{% url 'drink_list' %}" class="btn btn-secondary">Cancel</a>
+    </form>
+    {% else %}
+    <div class="container d-flex justify-content-center align-items-center">
+        <p class="alert alert-info col-md-3 text-center text-danger col-md-4">Dont have permission to delete employee</p>
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a href="{% url 'drink_list' %}" class="btn btn-secondary">Cancel</a>
-</form>
+    {% endif %}
+
+{% endwith %}
+
 {% endblock %}
