--- a/FoodDrinksApp/templates/drink_order.html
+++ b/FoodDrinksApp/templates/drink_order.html
@@ -1,19 +1,20 @@
-<!-- templates/myapp/drink_order.html -->
 {% extends 'base.html' %}
 
-{% block title %}Order Drink{% endblock %}
+{% block title %}Edit Employee{% endblock %}
 
 {% block content %}
-<form method="post" action="{% url 'order_process' item_type='drink' pk=drink.id %}">
-    {% csrf_token %}
-    <!-- <div class="form-group">
-        <label for="quantity">Quantity</label>
-        <input type="number" id="quantity" name="quantity" class="form-control" required>
+{% with user.userprofile.role as role %}
+    {% if role.name == 'Admin' %}
+    <form method="post" action="{% url 'order_process' item_type='drink' pk=drink.id %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary mt-2">Click Button to Order</button>
+    </form>
+    {% else %}
+    <div class="container d-flex justify-content-center align-items-center">
+        <p class="alert alert-info col-md-3 text-center text-danger col-md-4">Dont have permission to delete employee</p>
     </div>
-    <div class="form-group">
-        <label for="comments">Comments</label>
-        <textarea id="comments" name="comments" class="form-control"></textarea>
-    </div> -->
-    <button type="submit" class="btn btn-primary mt-2">Click Button to Order</button>
-</form>
+    {% endif %}
+
+{% endwith %}
+
 {% endblock %}
