--- a/WelcomeApp/templates/contact.html
+++ b/WelcomeApp/templates/contact.html
@@ -224,7 +224,7 @@
                     </div>
                     <h3>Email Us</h3>
                     <p>From your email app</p>
-                    <a href="mailto:support@doormat.ca" class="contact-button">support@exceelonehotel.co</a>
+                    <a href="mailto:support@doormat.ca" class="contact-button">support@exceelonehotel.co.tz</a>
                 </div>
 
                 <div class="contact-box">
