--- a/EmployeesApp/templates/employee_update.html
+++ b/EmployeesApp/templates/employee_update.html
@@ -3,13 +3,22 @@
 {% block title %}Edit Employee{% endblock %}
 
 {% block content %}
-<h2>Edit Employee</h2>
-<form method="post">
-    {% csrf_token %}
-    <div class="form-group">
-        {{ form.as_p }}
+{% with user.userprofile.role as role %}
+    {% if role.name == 'Admin' %}
+    <h2>Edit Employee</h2>
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.as_p }}
+        </div>
+        <button type="submit" class="btn btn-primary">Save changes</button>
+        <a href="{% url 'employee_list' %}" class="btn btn-secondary">Cancel</a>
+    </form>
+    {% else %}
+    <div class="container d-flex justify-content-center align-items-center">
+        <p class="alert alert-info col-md-3 text-center text-danger col-md-4">Dont have an access to update employee</p>
     </div>
-    <button type="submit" class="btn btn-primary">Save changes</button>
-    <a href="{% url 'employee_list' %}" class="btn btn-secondary">Cancel</a>
-</form>
+    {% endif %}
+{% endwith %}
+
 {% endblock %}
