--- a/FoodDrinksApp/templates/drink_list.html
+++ b/FoodDrinksApp/templates/drink_list.html
@@ -60,10 +60,14 @@
         }
     }
 </style>
-
+{% if drinks %}
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>Drink List</h2>
-    <a href="{% url 'drink_create' %}" class="btn btn-primary">Add Drink</a>
+    {% with user.userprofile.role as role %}
+        {% if role.name == 'Admin' %}
+            <a href="{% url 'drink_create' %}" class="btn btn-primary">Add Drink</a>
+        {% endif %}
+    {% endwith %}
 </div>
 <div class="row justify-content-center">
     {% for drink in drinks %}
@@ -77,15 +81,26 @@
             {% endif %}
             <div class="card-body d-flex flex-column">
                 <p class="card-text">
+                    <strong>{{ drink.drink_name }}</strong> <br>
                     <strong>Price:</strong> {{ drink.drink_price }} /=Tsh<br>
                 </p>
-                <div class="mt-auto">
-                    <a href="{% url 'drink_update' drink.pk %}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i> Edit</a>
-                    <a href="{% url 'drink_delete' drink.pk %}" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i> Delete</a>
-                </div>
+                {% with user.userprofile.role as role %}
+                    {% if role.name == 'Admin' %}
+                    <div class="mt-auto">
+                        <a href="{% url 'drink_update' drink.pk %}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i> Edit</a>
+                        <a href="{% url 'drink_delete' drink.pk %}" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i> Delete</a>
+                    </div>
+                    {% endif %}
+                {% endwith %}
+                
             </div>
         </div>
     </div>
     {% endfor %}
 </div>
+{% else %}
+    <div class="container d-flex justify-content-center align-items-center">
+        <p class="alert alert-info col-md-3 text-center text-danger col-md-4">Dont have permission to delete employee</p>
+    </div>
+    {% endif %}
 {% endblock %}
