--- a/FoodDrinksApp/templates/drink_update.html
+++ b/FoodDrinksApp/templates/drink_update.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Update Drink{% endblock %}
+{% block title %}Edit Employee{% endblock %}
 
 {% block content %}
-<h2>Update Drink</h2>
+{% with user.userprofile.role as role %}
+    {% if role.name == 'Admin' %}
+    <h2>Update Drink</h2>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-group">
@@ -12,4 +14,12 @@
     <button type="submit" class="btn btn-primary">Save changes</button>
     <a href="{% url 'drink_list' %}" class="btn btn-secondary">Cancel</a>
 </form>
+    {% else %}
+    <div class="container d-flex justify-content-center align-items-center">
+        <p class="alert alert-info col-md-3 text-center text-danger col-md-4">Dont have permission to delete employee</p>
+    </div>
+    {% endif %}
+
+{% endwith %}
+
 {% endblock %}
