--- a/FoodDrinksApp/templates/food_list.html
+++ b/FoodDrinksApp/templates/food_list.html
@@ -67,32 +67,43 @@
     }
 </style>
 
-<div class="d-flex justify-content-between align-items-center mb-3">
-    <h2>Food List</h2>
-    <a href="{% url 'food_create' %}" class="btn btn-primary">Add Food</a>
-</div>
-<div class="row justify-content-center">
-    {% for food in foods %}
-    <div class="col-md-2 mb-4">
-        <div class="card">
-            {% if food.food_image %}
-            <img src="{{ food.food_image.url }}" class="card-img-top" alt="{{ food.food_name }}">
-            <div class="overlay">
-                <div class="text">{{ food.food_name }}</div>
-            </div>
+{% if foods %}
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h2>Food List</h2>
+        {% with user.userprofile.role as role %}
+            {% if role.name == 'Admin' %}
+                <a href="{% url 'food_create' %}" class="btn btn-primary">Add Food</a>
             {% endif %}
-            <div class="card-body d-flex flex-column">
-                <p class="card-text">
-                    <strong>{{ food.food_name }}</strong> <br>
-                    <strong>Price:</strong> {{ food.food_price }} @plate<br>
-                </p>
-                <div class="mt-auto">
-                    <a href="{% url 'food_update' food.pk %}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i> Edit</a>
-                    <a href="{% url 'food_delete' food.pk %}" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i> Delete</a>
+        {% endwith %}
+    </div>
+    <div class="row justify-content-center">
+        {% for food in foods %}
+        <div class="col-md-2 mb-4">
+            <div class="card">
+                {% if food.food_image %}
+                <img src="{{ food.food_image.url }}" class="card-img-top" alt="{{ food.food_name }}">
+                <div class="overlay">
+                    <div class="text">{{ food.food_name }}</div>
+                </div>
+                {% endif %}
+                <div class="card-body d-flex flex-column">
+                    <p class="card-text">
+                        <strong>{{ food.food_name }}</strong> <br>
+                        <strong>Price:</strong> {{ food.food_price }} @plate<br>
+                    </p>
+                    {% with user.userprofile.role as role %}
+                        {% if role.name == 'Admin' %}
+                        <div class="mt-auto">
+                            <a href="{% url 'food_update' food.pk %}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i> Edit</a>
+                            <a href="{% url 'food_delete' food.pk %}" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i> Delete</a>
+                        </div>
+                        {% endif %}
+                    {% endwith %}
+                    
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
+{% endif %}
 {% endblock %}
