--- a/RoomBookingApp/templates/booking_create.html
+++ b/RoomBookingApp/templates/booking_create.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <h2>Add Booking</h2>
-{% if role.name == 'Booking Manager' %}
+{% with user.userprofile.role as role %}
+{% if role.name == 'Admin' %}
 <form method="post">
     {% csrf_token %}
     <div class="form-group">
@@ -14,4 +15,5 @@
     <a href="{% url 'booking_list' %}" class="btn btn-secondary">Cancel</a>
 </form>
 {% endif %}
+{% endwith %}
 {% endblock %}
