--- a/RoomBookingApp/templates/room_list.html
+++ b/RoomBookingApp/templates/room_list.html
@@ -4,12 +4,15 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-3">
+    {% if rooms %}
     <h2>Rooms</h2>
     <a href="{% url 'check_availability' %}" class="btn btn-primary">View Available Rooms</a>
+    {% endif %}
     {% if role.name == 'Admin' %}
     <a href="{% url 'room_create' %}" class="btn btn-primary">Add Room</a>
     {% endif %}
 </div>
+{% if rooms %}
 <table class="table table-bordered">
     <thead class="table-dark">
         <tr>
@@ -37,4 +40,11 @@
         {% endfor %}
     </tbody>
 </table>
+{% else %}
+    <div class="container d-flex justify-content-center align-items-center">
+        <p class="alert col-md-3 text-center text-danger col-md-4">
+            <i class="fas fa-exclamation-triangle"></i> No available rooms for now.
+        </p>
+    </div>
+{% endif %}
 {% endblock %}
