--- a/templates/base.html
+++ b/templates/base.html
@@ -83,15 +83,8 @@
                                         <i class="fas fa-tasks"></i> My Orders
                                     </a>
                                 </li>
-                                
                             {% endif %}
                         {% endif %}
-                        <!-- Logout link for authenticated users -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">
-                                <i class="fas fa-sign-out-alt"></i> Logout
-                            </a>
-                        </li>
                     {% endwith %}
                 {% endif %}
                 <!-- Links visible to everyone -->
@@ -112,15 +105,23 @@
                 </li>
                 {% if not user.is_authenticated %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">
+                            <i class="fas fa-user-plus"></i> Register
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">
                             <i class="fas fa-sign-in-alt"></i> Login
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">
-                            <i class="fas fa-sign-in-alt"></i> Register
-                        </a>
-                    </li>
+                {% endif %}
+                {% if user.is_authenticated %}
+                <!-- Logout link for authenticated users (Last item) -->
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </a>
+                </li>   
                 {% endif %}
             </ul>
         </div>
