--- a/AuthenticationApp/templates/login.html
+++ b/AuthenticationApp/templates/login.html
@@ -18,7 +18,7 @@
             </div>
             <input type="hidden" name="next" value="{{ next }}">
             <button type="submit" class="btn btn-primary btn-block mt-2">Login</button>
-            <p>I don't have an account? <a href="{% url 'register' %}">Sign up</a></p>
+            <p>Don't have an account? <a href="{% url 'register' %}">Sign up</a></p>
         </form>
     </div>
 </div>
