--- a/FoodDrinksApp/templates/order_list.html
+++ b/FoodDrinksApp/templates/order_list.html
@@ -29,7 +29,7 @@
                 <td>{{ order.id }}</td>
                 <td>{{ order.get_item_name }}</td>
                 <td>{{ order.get_item_type_display }}</td>
-                <td>{{ order.quantity }}</td>
+                <td>{{ order.quantity }} plates</td>
                 <td>{{ order.comments }}</td>
                 <td>{{ order.created_at }}</td>
                 <td>
