--- a/RoomBookingApp/templates/booking_list.html
+++ b/RoomBookingApp/templates/booking_list.html
@@ -3,6 +3,11 @@
 {% block title %}Booking List{% endblock %}
 
 {% block content %}
+<style>
+    .booking-list{
+        font-size: 28px;
+    }
+</style>
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h2></h2>
@@ -13,7 +18,7 @@
     {% endwith %}
 </div>
 {% if bookings %}
-<h2>Bookings</h2>
+<p class="booking-list">Booking List</p>
 <table class="table table-bordered">
     <thead class="table-dark">
         <tr>
