--- a/RoomBookingApp/templates/book_room.html
+++ b/RoomBookingApp/templates/book_room.html
@@ -1,22 +1,34 @@
-<h2>Booking for Room {{ room.room_number }}</h2>
+{% extends 'base.html' %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    
-    <h5>Select a Package:</h5>
-    {% if packages %}
-        <ul>
-            {% for package in packages %}
-                <li>
-                    <input type="checkbox" name="package" value="{{ package.id }}">
-                    {{ package.name }} - {{ package.price }}
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>No packages available for this room.</p>
-    {% endif %}
-    
-    <button type="submit" class="btn btn-success">Book Now</button>
-</form>
+{% block title %}Book Room{% endblock %}
+
+{% block content %}
+<div class="container mt-4">
+    <h2>Booking for Room {{ room.room_number }}</h2>
+
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.as_p }}
+        </div>
+        
+        <h5>Select a Package:</h5>
+        {% if packages %}
+            <ul class="list-unstyled">
+                {% for package in packages %}
+                    <li>
+                        <input type="checkbox" name="packages" value="{{ package.id }}" id="package_{{ package.id }}">
+                        <label for="package_{{ package.id }}">
+                            {{ package.name }} - {{ package.price }}
+                        </label>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>No packages available for this room.</p>
+        {% endif %}
+        
+        <button type="submit" class="btn btn-success">Book Now</button>
+    </form>
+</div>
+{% endblock %}
