--- a/RoomBookingApp/templates/room_list.html
+++ b/RoomBookingApp/templates/room_list.html
@@ -8,9 +8,11 @@
     <h2>Rooms</h2>
     <a href="{% url 'check_availability' %}" class="btn btn-primary">View Available Rooms</a>
     {% endif %}
+    {% with user.userprofile.role as role %}
     {% if role.name == 'Admin' %}
-    <a href="{% url 'room_create' %}" class="btn btn-primary">Add Room</a>
+        <a href="{% url 'room_create' %}" class="btn btn-primary">Add Room</a>
     {% endif %}
+    {% endwith %}
 </div>
 {% if rooms %}
 <table class="table table-bordered">
@@ -19,9 +21,11 @@
             <th>Room Number</th>
             <th>Room Type</th>
             <th>Price</th>
+            {% with user.userprofile.role as role %}
             {% if role.name == 'Admin' %}
             <th>Actions</th>
             {% endif %}
+            {% endwith %}
         </tr>
     </thead>
     <tbody>
@@ -30,12 +34,14 @@
             <td>{{ room.room_number }} ROOM</td>
             <td>{{ room.room_type }}</td>
             <td>{{ room.price }}=/ Tsh</td>
+            {% with user.userprofile.role as role %}
             {% if role.name == 'Admin' %}
             <td>
                 <a href="{% url 'room_update' room.pk %}" title="Edit" style="color: #ffc107;"><i class="fas fa-edit"></i></a>
                 <a href="{% url 'room_delete' room.pk %}" title="Delete" style="color: #dc3545;"><i class="fas fa-trash-alt"></i></a>                
             </td>
             {% endif %}
+            {% endwith %}
         </tr>
         {% endfor %}
     </tbody>
